--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -107,6 +107,13 @@
     .table {
       border-collapse: collapse !important;
 
+
+      .thead-dark {
+        th {
+          color: inherit !important;
+        }
+      }
+
       td,
       th {
         background-color: #fff !important;
@@ -117,6 +124,9 @@
       td {
         border: 1px solid #ddd !important;
       }
+    }
+    .table-dark {
+      color: inherit !important;
     }
 
     // Bootstrap specific changes end
